2011-12-10  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* Makefile.in: Copied contents of $(system_header_dirs) into
	$(header_dirs) in order to have -I added automatically to the compiler
	invocation.  This makes sure that dfp/decimal/decimal always comes
	before the system include/decimal/decimal header.

2011-12-10  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* README.user: Add instructions for using <decimal/decimal> to pick up
	operator<< and operator>> overloads for decimal[32|64|128] types.
	* README.developer: Removed necessity of including -isystem in
	CPPFLAGS in order to pick up decimal headers.
	* dfp/decimal: Created dfp/decimal/ header include directory.
	* dfp/decimal.tmp: Moved decimal.tmp to decimal/decimal.
	* dfp/decimal/decimal: Moved decimal.tmp to decimal/decimal.

2011-12-10  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* Makefile.in: Install dfp/decimal/ directory.  Add
	dfp/decimal/decimal path.
	* tests/test-ostream.cpp: Change <decimal> to <decimal/decimal>
	* TODO: Added directive to test decimal/ directory installs.
	* dfp/decimal: Moved file "decimal" to "decimal.tmp".
	* dfp/decimal.tmp: Moved file "decimal" to "decimal.tmp".

2011-12-08  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* configure: Regenerated.
	* Makefile.in:
	(@CXX@, @LLD@, @OBDJUMP@, @GDB@, @CXXFLAGS@, and @CPPFLAGS@): New
	imports.
	(header_dirs): Move dfp/ to $(system_header_dirs).
	(CXX_DEFINES CXX_WARNS): New variables.
	(.c.o): Add $(CPPFLAGS). Add -I$(system_header_dirs).
	(.c.os): Likewise
	(.S.o): Add -I$(system_headers).
	(.cpp.os) Likewise.
	(GLIBC_LIBS): Remove unnecessary libpthread.so linkage.
	(libdfp_cxx_tests): New variable.
	(libdfp_tests): Renamed to (libdfp_c_tests) and replaced with
	$(libdfp_c_tests) $(libdp_cxx_tests).
	Added new rule for $(libdfp_cxx_tests).os dependencies on float.h.
	Added new rule for $(libdfp_tests) to rely on tests/scaffold.c.
	Added new rule to link $(libdfp_cxx_tests) to their .os files.
	(.SUFFIXES): Added .cpp.